--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -39,12 +39,28 @@
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
-                    <li>
+                    <li class="dropdown">
+                      <a href="#" class="dropdown-toggle" data-toggle="dropdown">Destinations  <span class="caret"></span></a>
+                      <ul class="dropdown-menu">
+                        <?php $i=1; foreach($this->countries as $key=>$value): ?>
+                            <li> <a href="country/cities?cid=<?= $value['id']?>"><?= $value['name']?> </a> </li>
+                        <?php endforeach;?>                        
+                      </ul>
+                    </li>
+                    <li class="dropdown">
+                      <a href="#" class="dropdown-toggle" data-toggle="dropdown">Bookings  <span class="caret"></span></a>
+                      <ul class="dropdown-menu">
+                            <li> <a href="#">Car Request </a> </li>
+                            <li> <a href="#">Hotel Reservation </a> </li>
+
+                      </ul>
+                    </li>
+                    <!-- <li>
                         <a class="page-scroll" href="#destinations">Destinations</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#booking">Booking</a>
-                    </li>
+                    </li> -->
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
