--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -99,12 +99,14 @@ else{
                         <?php endforeach;?>                        
                       </ul>
                     </li>
+                    <?php if(isset($name)): ?>
                     <li class="dropdown">
                       <a href="#" class="dropdown-toggle" data-toggle="dropdown">Bookings  <span class="caret"></span></a>
-                      <ul class="dropdown-menu">
-                            <li> <a href="#">Car Request </a> </li>
-                            <li> <a href="#">Hotel Reservation </a> </li>
 
+                      <ul class="dropdown-menu">
+                            <li> <a href="user/hotalinfo/name/<?=  $name ?>">Hotel Reservation</a> </li>                     
+                            <li> <a href="user/carinfo/name/ <?= $name ?>">Car Request</a> </li>
+                    <?php endif; ?>
                       </ul>
             
                     <!-- <li>
@@ -112,7 +114,8 @@ else{
                     </li>
                     <li>
                         <a class="page-scroll" href="#booking">Booking</a>
-                    </li> -->
+                        -->
+                    </li> 
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
