admi- add new hotel , location

--- a/application/views/scripts/location/add.phtml
+++ b/application/views/scripts/location/add.phtml
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>New Hotel</title>
+	<title>New Location</title>
 </head>
 <body>
 <div class="container">
 <div class = "page-header" align="center">
    
-   <h1>Add New Hotel</h1>
+   <h1>Add New Location</h1>
    
 </div>
 	
 	<?php
-		echo $this->hotel_form;
+		echo $this->location_form;
 	?>
 
 
