--- a/application/views/scripts/hotel/list.phtml
+++ b/application/views/scripts/hotel/list.phtml
@@ -8,15 +8,18 @@
 
 <div class="page-header" align="center">
 	<h2>All Hotels </h2>
+	<div class="pull-left">
+		<a class='btn btn-success btn-lg' href='/hotel/add'>Add</a>
+	</div>
 </div>
-<div style="margin-top: 50px;"></div>
+<div style="margin-top: 80px;"></div>
 <div >
 <table class="table">
 	<tr>
 		<th>ID</th>
 		<th>Name</th>
 		<th>City_ID</th>
-		<th colspan="3">Action</th>
+		<th colspan="2">Action</th>
 	</tr>
 
 		<?php
@@ -25,7 +28,6 @@
 			echo "<td>".$value['id']."</td>";
 			echo "<td>".$value['name']."</td>";
 			echo "<td>".$value['city_id']."</td>";
-			echo "<td><a class='btn btn-success' href='/hotel/add'>Add</a></td>";
 			echo "<td><a class='btn btn-danger' href='/hotel/delete/eid/".$value['id']."'>Delete</a></td>";
 			echo "<td><a class='btn btn-primary' href='/hotel/edit/eid/".$value['id']."'>Edit</a></td>";
 			echo "</tr>";
