--- a/application/views/scripts/city/list.phtml
+++ b/application/views/scripts/city/list.phtml
@@ -28,6 +28,7 @@
 		<?php
 		foreach ($this->cities as $key => $value) {
 			echo "<tr>";
+			//var_dump($value['image']);exit;
 			echo "<td><img src='/var/www/html/zend_project/public".$value['image']."' height='80' width='80'></td>";
 			echo "<td>".$value['id']."</td>";
 			echo "<td>".$value['name']."</td>";
@@ -41,6 +42,7 @@
 		}
 		
 		?>
+
 
 </table>
 </div>
