--- a/application/views/scripts/city/list.phtml
+++ b/application/views/scripts/city/list.phtml
@@ -29,7 +29,7 @@
 		foreach ($this->cities as $key => $value) {
 			echo "<tr>";
 			//var_dump($value['image']);exit;
-			echo "<td><img src='/var/www/html/zend_project/public".$value['image']."' height='80' width='80'></td>";
+			echo "<td><img src='".$value['image']."' height='100' width='100'></td>";
 			echo "<td>".$value['id']."</td>";
 			echo "<td>".$value['name']."</td>";
 			echo "<td>".$value['rate']."</td>";
