admin- block and unblock users / users list page in admin

--- a/application/views/scripts/user/admin.phtml
+++ b/application/views/scripts/user/admin.phtml
@@ -7,16 +7,22 @@
 <div class="container">
 	<div class="page-header text-warning" align="center">
 		<h1>Admin Page</h1>
+		<div class="pull-right">
+        <a class='btn btn-danger btn-lg' href='/user/logout'>Logout</a>
+    </div>
 	</div>
+	
 <div style="margin-top: 80px;"></div>
 
 <div class="col-md-3"></div>
+
 <div  class="col-md-6">
+
 	<a class="btn btn-warning btn-lg btn-block" href="/country/list">Manage Countries</a><br><br><br>
 	<a class="btn btn-warning btn-lg btn-block" href="/city/list">Manage Cities</a><br><br><br>
 	<a class="btn btn-warning btn-lg btn-block" href="/hotel/list">Manage Hotels</a><br><br><br>
 	<a class="btn btn-warning btn-lg btn-block" href="/location/list">Manage Locations</a><br><br><br>
-
+	<a class="btn btn-warning btn-lg btn-block" href="/user/list">Manage Users</a><br><br><br>
 
 </div>
 
