--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -48,7 +48,7 @@
             
     ?>
     <div class="pull-right">
-        <a class='btn btn-default' href='/user/logout'>Logout</a>
+        <a class='btn btn-danger' href='/user/logout'>Logout</a>
     </div>
     <!--facebook-->
     <?php
