--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -1,31 +1,52 @@
 <!DOCTYPE html>
 <head>
-<!-- Latest compiled and minified CSS -->
+
+<!--<!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.
 min.css" integrity="sha384-
 1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-<!-- Optional theme -->
+<!--<!-- Optional theme -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-
 theme.min.css" integrity="sha384-
 fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
-<link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">   
-<!-- Latest compiled and minified JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"
+<link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
+<!--<!-- Latest compiled and minified JavaScript -->
+
+    <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
+<!---->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"
 integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS"
 crossorigin="anonymous"></script>
-<!-- Custom Fonts -->
+<!--<!-- Custom Fonts -->
 <link rel="stylesheet" href="css/animate.min.css" type="text/css">
-<!-- Custom CSS -->
+<!--<!-- Custom CSS -->
 <link rel="stylesheet" href="css/creative.css" type="text/css">
-<!-- jQuery -->
-<!-- Custom Theme JavaScript -->
-<script src="js/creative.js"></script>
-<script src="js/jquery.js"></script>
-<!-- Bootstrap Core JavaScript -->
-<script src="js/bootstrap.min.js"></script>
-</head>
-<?php echo $this->layout()->content; ?>
+<!--<!-- jQuery -->
+<!--<!-- Custom Theme JavaScript -->
+<!---->
+    <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
 
+    <script src="js/creative.js"></script>
+<script src="js/jquery.js"></script>
+
+<script src="js/bootstrap.min.js"></script>
+
+    <meta name="viewport" content="initial-scale=1.0">
+    <meta charset="utf-8">
+    <style>
+        html, body {
+            height: 100%;
+            margin: 0;
+            padding: 0;
+        }
+        #map {
+            height: 50%;
+        }
+    </style>
+</head>
+<body>
+<?php echo $this->layout()->content; ?>
+</body>
 <script src="js/jquery.easing.min.js"></script>
 <script src="js/jquery.fittext.js"></script>
 <script src="js/wow.min.js"></script>
