--- a/application/views/scripts/city/display.phtml
+++ b/application/views/scripts/city/display.phtml
@@ -1,9 +1,20 @@
+
 <br /><br />
+
+
+
+<div id="map"></div>
+
 <div id="view-content">
+
 <p>
     <?php
     echo $this->city_desc;
+    ?>
+
+    <?php
     echo "<br>";
+
     foreach ($this->paginator as $key => $val)
     {
         echo $val['title'];
@@ -19,3 +30,19 @@
 
 </p>
 </div>
+
+
+
+<script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
+
+<script>
+
+    function initMap() {
+        var mapDiv = document.getElementById('map');
+        var map = new google.maps.Map(mapDiv,{
+            center: {lat:<?php echo $this->city_lat?>  , lng:  <?php echo $this->city_long?>},
+            zoom: 11
+        });
+    }
+</script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC8qj-3E6nRcvPyJP9DwpAZ3Xr_iSq_ot8&callback=initMap" async defer></script>
