--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -177,7 +177,7 @@ else{
             <div class="row no-gutter">
                 <?php foreach($this->citys_rated as $key=>$value): ?>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="country/city?id=<?= $value['id']?>" class="portfolio-box">
+                    <a href="city/display?id=<?= $value['id']?>" class="portfolio-box">
                         <img src="<?= $value['image']?>" class="img-responsive" alt="" width="200" height="200">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
