--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -29,7 +29,6 @@ if (!empty($sessionRead)) {
   </li> 
 <?php
 }
-
 //elseif (isset($fbsession->first_name) && !empty (isset($fbsession->first_name))) {
 //$name = $fbsession->first_name;
 //echo '<li><a href="#"> Welcome'." ". $name.'</a>'.'</li>';
@@ -37,7 +36,7 @@ if (!empty($sessionRead)) {
 <!--<li><a href="<\?php echo $this->baseUrl() ?>/user/fblogout"><span class="glyphicon glyphicon-log-in"></span> Logout </a>
   </li> -->
 <!--<\?php }?> -->
-
+<?php echo $this->layout()->content; ?>
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="/bootstrap/js/bootstrap.min.js"></script>
