--- a/application/views/scripts/user/add.phtml
+++ b/application/views/scripts/user/add.phtml
@@ -5,6 +5,11 @@
 </head>
 <body>
 <div class="container">
+<div class = "page-header" >
+   
+   <h1>Registration Form</h1>
+   
+</div>
 
 <?php
 	echo $this->user_form;
