--- a/application/views/scripts/user/login.phtml
+++ b/application/views/scripts/user/login.phtml
@@ -7,10 +7,10 @@
 <div class="container">
 <div class = "page-header" >
    
-   <h1>Login Page</h1>
+   <h1>Login Form</h1>
    
 </div>
-<div class="container">
+
 	<?php
 		
 		echo "<h3 class='text-danger'>".$this->error_message."</h3>";
