Add Comment Section

--- a/application/views/scripts/city/display.phtml
+++ b/application/views/scripts/city/display.phtml
@@ -1,8 +1,5 @@
 
 <br /><br />
-
-
-
 <div id="map"></div>
 
 <div id="view-content">
@@ -10,6 +7,7 @@
 <p>
     <?php
     echo $this->city_desc;
+    echo "<a href='/city/addpost/city_id/{$this->city_id}'></a>"
     ?>
 
     <?php
@@ -32,8 +30,7 @@
 </div>
 
 
-
-<script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
+<!--script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
 
 <script>
 
@@ -45,4 +42,4 @@
         });
     }
 </script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC8qj-3E6nRcvPyJP9DwpAZ3Xr_iSq_ot8&callback=initMap" async defer></script>
+<!--script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC8qj-3E6nRcvPyJP9DwpAZ3Xr_iSq_ot8&callback=initMap" async defer></script>
