--- a/application/views/scripts/city/post.phtml
+++ b/application/views/scripts/city/post.phtml
@@ -1,9 +1,55 @@
 <br /><br />
+<?php
+$isLogin=false;
+$user=null;
+$auth = Zend_Auth::getInstance();
+$storage = $auth->getStorage();
+$sessionRead = $storage->read();
+$fpsession = new Zend_Session_Namespace('facebook');
+if (!empty($sessionRead)) {
+    $isLogin=true;
+    $user=$sessionRead;
+    include "disqus.phtml";
+    ?>
+    <script type="text/javascript">
+        var disqus_config = function() {
+            this.page.remote_auth_s3 = "<?php echo "$message $hmac $timestamp"; ?>";
+            this.page.api_key = "<?php echo DISQUS_PUBLIC_KEY; ?>";
+        }
+    </script
+    <?php
+}
+?>
+
 <div id="view-content">
 <?php
 echo $this->post[0]['title'];
 echo "<br>";
 echo $this->post[0]['content'];
-
 ?>
 </div>
+<div id="disqus_thread"></div>
+<script>
+/**
+ * RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+ * LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables
+ */
+/*
+ var disqus_config = function () {
+ this.page.url = PAGE_URL; // Replace PAGE_URL with your page's canonical URL variable
+ this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+ };
+ */
+(function() { // DON'T EDIT BELOW THIS LINE
+    var d = document, s = d.createElement('script');
+
+        s.src = '//greentravelteam.disqus.com/embed.js';
+
+        s.setAttribute('data-timestamp', +new Date());
+        (d.head || d.body).appendChild(s);
+    })();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
+
+<script id="dsq-count-scr" src="//greentravelteam.disqus.com/count.js" async></script>
+
