--- a/application/views/scripts/city/display.phtml
+++ b/application/views/scripts/city/display.phtml
@@ -30,7 +30,7 @@
 </div>
 
 
-<!--script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
+<script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
 
 <script>
 
@@ -42,4 +42,4 @@
         });
     }
 </script>
-<!--script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC8qj-3E6nRcvPyJP9DwpAZ3Xr_iSq_ot8&callback=initMap" async defer></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC8qj-3E6nRcvPyJP9DwpAZ3Xr_iSq_ot8&callback=initMap" async defer></script>
