--- a/application/views/scripts/city/hotelreserve.phtml
+++ b/application/views/scripts/city/hotelreserve.phtml
@@ -30,8 +30,8 @@
 
     <script src="/bootstrap/js/bootstrap-datepicker.js"></script>
 <script>
-	$('#date_field1').datepicker('show');
-	$('#date_field2').datepicker('show');
+	$('#date_field1').datepicker();
+	$('#date_field2').datepicker();
 </script> 
     
     
