display menus in home page

--- a/application/views/scripts/user/update.phtml
+++ b/application/views/scripts/user/update.phtml
@@ -1,4 +1,18 @@
-<?php
-echo $this->user_form;
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Update Profile</title>
+</head>
+<body>
+<div class="container">
+<div class="page-header">
+	<h1>Update Profile</h1>
+</div>
+	<?php
+		echo $this->user_form;
 
-?>
+	?>
+</div>
+</body>
+</html>
+
