--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -3,9 +3,13 @@
 <script src="/bootstrap/js/jquery.min.js"></script>
 <script src="/bootstrap/js/jquery.easing.min.js"></script>
 <script src="/bootstrap/js/jquery.fittext.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
 <!-- compiled and minified CSS -->
 <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
+<link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
+
 <!-- Optional theme -->
 <link rel="stylesheet" href="/bootstrap/css/bootstrap-theme.min.css">
 <!-- Custom Fonts -->
