--- a/application/views/scripts/city/carreservation.phtml
+++ b/application/views/scripts/city/carreservation.phtml
@@ -6,13 +6,33 @@
     <link rel="stylesheet" href="/bootstrap/css/reset.css">
     <link rel="stylesheet" href="/bootstrap/css/hotel.css">
     <script src="/bootstrap/js/prefixfree.min.js"></script>
+    <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
   </head>
 
   <body>
 
     <div id="bg"></div>
 <form action="<?= $this->car_form->getAction()?>" method="<?= $this->car_form->getMethod()?>">
-   enter location <?= $this->car_form->name ?>
+     <?= $this->car_form->name ?> 
+
+    <!-- -->
+<script>
+
+$(function () {
+  <?php 
+  echo "<script>$('#name').append( '<option>".""."</option>')</script></script>";
+   foreach ($this->locations as $key => $value)
+     {
+      echo "<script>$('#name').append( '<option>".$value['name']."</option>')</script></script>";
+     }
+?>
+
+
+
+</script>
+
+
+    <!-- -->
     date From <input   size="16" type="text" name="from" id="date_field1" readonly >
     time from <?= $this->car_form->time_form_hour ?><?= $this->car_form->time_form_min ?>
      <br>
