--- a/application/views/scripts/city/carreservation.phtml
+++ b/application/views/scripts/city/carreservation.phtml
@@ -12,6 +12,7 @@
   <body>
 
     <div id="bg"></div>
+
 <form action="<?= $this->car_form->getAction()?>" method="<?= $this->car_form->getMethod()?>">
      <?= $this->car_form->name ?> 
 
@@ -20,12 +21,19 @@
 
 $(function () {
   <?php 
-  echo "<script>$('#name').append( '<option>".""."</option>')</script></script>";
-   foreach ($this->locations as $key => $value)
-     {
-      echo "<script>$('#name').append( '<option>".$value['name']."</option>')</script></script>";
-     }
-?>
+     foreach ($this->locations as $key => $value)
+     { ?>
+
+    $('#name').append("<option><?php echo $value['name'];?></option>");
+
+
+ <?php }?>
+  // echo "<script>$('#name').append( '<option>".""."</option>')
+  <!--//  foreach ($this->locations as $key => $value)
+  //    {
+  //     echo "<script>$('#name').append( '<option>$value['name']</option>')
+  //    }-->
+});
 
 
 
@@ -33,12 +41,13 @@ $(function () {
 
 
     <!-- -->
-    date From <input   size="16" type="text" name="from" id="date_field1" readonly >
-    time from <?= $this->car_form->time_form_hour ?><?= $this->car_form->time_form_min ?>
+     <?= $this->car_form->date_from ?>
+    <center>time from</center> <?= $this->car_form->time_form_hour ?><?= $this->car_form->time_form_min ?>
      <br>
- date To <input   size="16" type="text" name="to" id="date_field2" readonly >
-time to <?= $this->car_form->time_to_hour ?><?= $this->car_form->time_to_min ?>
-  <br> <?= $this->car_form->submit?>
+    <?= $this->car_form->date_to ?>
+     <center>time to</center><?= $this->car_form->time_to_hour ?><?= $this->car_form->time_to_min ?>
+    <br> 
+    <?= $this->car_form->submit?>
   
 
 </form> 
@@ -46,8 +55,11 @@ time to <?= $this->car_form->time_to_hour ?><?= $this->car_form->time_to_min ?>
 
     <script src="/bootstrap/js/bootstrap-datepicker.js"></script>
 <script>
-	$('#date_field1').datepicker('show');
-	$('#date_field2').datepicker('show');
+  $('#date_from').val('08/04/2016');
+	$('#date_from').datepicker('show');
+  $('#date_to').val('09/14/2016');
+
+	$('#date_to').datepicker('show');
 </script>   
     
     
