--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -71,7 +71,7 @@ if (!empty($sessionRead)) {
   $uid = $sessionRead->id;
   echo '<li><a href="#"> Welcome'." ". $name.'</a>'.'</li>'; 
   ?>
-  <li><a href="<?php echo $this->baseUrl() ?>/user/logout"><span class="glyphicon glyphicon-log-in"></span> Logout </a>
+  <li><a href="<\?php echo $this->baseUrl() ?>/user/logout"><span class="glyphicon glyphicon-log-in"></span> Logout </a>
   </li> 
 <?php
 }
@@ -82,5 +82,110 @@ if (!empty($sessionRead)) {
 <!--<li><a href="<\?php echo $this->baseUrl() ?>/user/fblogout"><span class="glyphicon glyphicon-log-in"></span> Logout </a>
   </li> -->
 <!--<\?php }?> -->
-<?php echo $this->layout()->content; ?>
+
+
+<div class=" text-center">
+   <div style="margin-top: 60px;"></div>
+ 
+   <h3 class="text-danger">
+    <?php
+    $countries= $this->layout()->countries;
+    $uri = $this->serverUrl(true);
+    $path = explode('/', $uri);
+    $fbsession = new Zend_Session_Namespace('facebook');
+    $auth = Zend_Auth::getInstance();
+    $storage = $auth->getStorage();
+    $sessionRead = $storage->read();
+    if (!empty($sessionRead)) {
+        if($sessionRead->type == 0){ //user not admin
+            $name = $sessionRead->username;
+            echo " * Welcome " . $name . " *";
+
+        }
+        else{ //admin not user
+
+            header("Location: /user/admin");
+        ?>
+    <?php } ?>
+    <div class="pull-left">
+        <a class='btn btn-danger' href='/user/logout'>Logout</a>
+    </div>
+    <!--facebook-->
+    <?php }
+        else if (isset($fbsession->username) && !empty (isset($fbsession->username))) {
+            $name = $fbsession->username;
+            echo " * Welcome " . $name . " *";
+    ?>
+    <div class="pull-left">
+        <a class='btn btn-danger' href="/user/fplogout">Logout</a>
+    </div>
+
+<?php }
+    else{
+        echo " * Welcome * " ;
+    }
+?>
+</h3>
+</div>
+<?php 
+if(!isset($path[4]) or (!empty($path[4]) and strpos($path[4], 'add' )!==0 and strpos($path[4], 'login' )!==0 and strpos($path[4], 'update' )!==0 and strpos($path[4], 'carreservation' )!==0 and strpos($path[4], 'hotelreserve' )!==0)){ ?>
+
+    <nav id="mainNav" class="navbar navbar-info navbar-fixed-top">
+        <div class="container-fluid">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+ 
+            </div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-right">
+                
+                    <li class="dropdown">
+                      <a href="#" class="dropdown-toggle" data-toggle="dropdown">Destinations <span class="caret"></span></a>
+                       <ul class="dropdown-menu">
+                        <?php                         
+                        $i=1; foreach($countries as $key=>$value): ?>
+                            <li> <a href="/country/cities?cid=<?= $value['id']?>"><?= $value['name']?> </a> </li>
+                        <?php endforeach; ?>                        
+                      </ul>
+                    </li>
+
+                    <?php if(!(isset($name))): ?>
+                    <li><a href="/user/login">Login</a></li>
+                    <li><a href="user/add">Sign-Up</a></li>
+                    <?php endif; ?>
+
+                    <?php if(isset($name) and ($path[3]=='city' or $path[3]==NULL)): ?>
+                    <li class="dropdown">
+                      <a href="#" class="dropdown-toggle" data-toggle="dropdown">Bookings  <span class="caret"></span></a>
+
+                      <ul class="dropdown-menu">
+                            <li> <a href="/city/hotelreserve?id=<?=  $this->layout()->city_id ?>">Hotel Reservation</a> </li>                     
+                            <li> <a href="/city/carreservation?id=<?=  $this->layout()->city_id ?>">Car Request</a> </li>
+                    
+                      </ul>
+                    </li> 
+                    <?php if(!(isset($fbsession->username)))  : ?>
+                    <li><a  href='/user/update/name/ <?php echo $name ?>'> update profile </a></li>
+                    <?php endif; ?>
+                    
+                    <?php endif; ?>
+
+                    
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container-fluid -->
+    </nav>
+<?php }
+echo $this->layout()->content;
+?>
 
