--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -15,16 +15,18 @@
 
     <style>
     .carousel-inner{
-        height:400px;
+        height:500px;
+        width: 108.55%;
+        right: 4.3%;
+        alignment-adjust: central;
     }
     </style>
 
 </head>
 
-<body id="page-top">
+<body id="page-top" class="home">
 <div class="container">
 
-    <div style="height:100px;"></div>
  <div class="container">
        
  <div id="myCarousel" class="carousel slide  " data-ride="carousel" >
@@ -40,13 +42,13 @@
   </ol>
 
   <!-- Wrapper for slides -->
-  <div class="carousel-inner" role="listbox">
+  <div class="carousel-inner" >
     <div class="item active" >
-                <div class="img_container ">
-                    <img src="<?= $this->countrys_rated[0]['image']?>" alt="" >
-                    <a href="country/cities?cid=<?= $this->countrys_rated[0]['id']?>" class="btn btn-info btn-xl page-scroll"> Learn More > </a>
-                </div>
-            </div>
+        <div class="img_container ">
+            <img src="<?= $this->countrys_rated[0]['image']?>" alt="" >
+            <a href="country/cities?cid=<?= $this->countrys_rated[0]['id']?>" class="btn btn-info btn-xl page-scroll"> Learn More > </a>
+        </div>
+    </div>
     
     <?php
     $i=1; foreach($this->countrys_rated as $key=>$value): 
@@ -59,29 +61,32 @@
         </div>             
     <?php  } $i=0; endforeach;?>
   </div>
+   <!-- Controls -->
+   <a class="left carousel-control" href="#myCarousel" data-slide="prev" style=" margin-top: 100px;height:400px;">
+            <span class="icon-prev"></span>
+        </a>
+        <a class="right carousel-control" href="#myCarousel" data-slide="next" style="margin-top: 100px; height:400px;">
+            <span class="icon-next"></span>
+        </a>
 </div>
 </div>
-    <!-- <section class="bg-info" id="about">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">We've got what you need!</h2>
-                    <hr class="light">
-                    <p class="text-faded">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
-                    <a href="#" class="btn btn-default btn-xl">Get Started!</a>
-                </div>
-            </div>
-        </div>
-    </section> -->
     <div style="height:500px;"></div>
+                
+                
+
+<div class="col-lg-8 col-lg-offset-2 text-center">
+    <h2 class="section-heading">High six rated Cities!</h2>
+    <hr class="light" style="color:green;">
+</div>
+
 
     <section class="no-padding" id="portfolio">
-        <div class="container-fluid">
-            <div class="row no-gutter">
+        <div class="container-fluid" >
+            <div class="row no-gutter" >
                 <?php foreach($this->citys_rated as $key=>$value): ?>
-                <div class="col-lg-4 col-sm-6">
-                    <a href="greentravel.com/city/display?id=<?= $value['id']?>" class="portfolio-box">
-                        <img src="<?= $value['image']?>" class="img-responsive" alt="" width="200" height="200">
+                <div class="col-lg-4 col-sm-6" style="height:200px;">
+                    <a href="/city/display?id=<?= $value['id']?>" class="portfolio-box">
+                        <img src="<?= $value['image']?>" class="img-responsive " alt="" style="width: 500px; height:300px;">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
@@ -98,7 +103,7 @@
             </div>
         </div>
     </section>
-
+    <div style="height:50px;"></div>
 
     <section id="contact">
 
@@ -107,7 +112,7 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Let's Get In Touch!</h2>
                     <hr class="primary">
-                    <p>Ready to start your next project with us? That's great! Give us a call or send us an email and we will get back to you as soon as possible!</p>
+                    <p>Ready to start your adventure with us? That's great! Give us a call or send us an email and we will get back to you as soon as possible!</p>
                 </div>
                 <div class="col-lg-4 col-lg-offset-2 text-center">
                     <i class="fa fa-phone fa-3x wow bounceIn"></i>
@@ -136,8 +141,15 @@
     alignment-adjust: middle;
     z-index: 100;
     right: 44%;
-    top: 200px;
+    top: 275px;
+    
 }
+.portfolio-box-caption:hover{
+    background-color: rgba(0, 255, 92, 0.5); 
+}
+ .home{
+background-color: rgba(0, 255, 92, 0.3); 
+ }
 
 </style>
 </div>
