edit time in car reservation

--- a/application/views/scripts/city/carreservation.phtml
+++ b/application/views/scripts/city/carreservation.phtml
@@ -43,9 +43,11 @@ $(function () {
     <!-- -->
      <?= $this->car_form->date_from ?>
     <center>time from</center> <?= $this->car_form->time_form_hour ?><?= $this->car_form->time_form_min ?>
+    <?= $this->car_form->am_pm1 ?>
      <br>
     <?= $this->car_form->date_to ?>
      <center>time to</center><?= $this->car_form->time_to_hour ?><?= $this->car_form->time_to_min ?>
+      <?= $this->car_form->am_pm2 ?>
     <br> 
     <?= $this->car_form->submit?>
   
@@ -56,10 +58,9 @@ $(function () {
     <script src="/bootstrap/js/bootstrap-datepicker.js"></script>
 <script>
   $('#date_from').val('08/04/2016');
+  $('#date_to').val('09/04/2016');
 	$('#date_from').datepicker('show');
-  $('#date_to').val('09/14/2016');
-
-	$('#date_to').datepicker('show');
+  $('#date_to').datepicker('show');
 </script>   
     
     
