--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -172,7 +172,7 @@ if(!isset($path[4]) or (!empty($path[4]) and strpos($path[4], 'add' )!==0 and st
                       </ul>
                     </li> 
                     <?php if(!(isset($fbsession->username)))  : ?>
-                    <li><a  href='/user/update/name/ <?php echo $name ?>'> update profile </a></li>
+                    <li><a  href='/user/update'> update profile </a></li>
                     <li><a  href='/user/logout'>Logout</a></li>
                     <?php endif; ?>
                     
