--- a/application/views/scripts/user/hotalinfo.phtml
+++ b/application/views/scripts/user/hotalinfo.phtml
@@ -21,6 +21,7 @@ color:lightgrey;
 // foreach($this->user as  $value)
 // {
 $value=$this->data;
+//var_dump($value);
 if($value!=null)
 //var_dump($value);exit();
 echo 
