add bootstrap to addpost.form

--- a/application/views/scripts/city/addpost.phtml
+++ b/application/views/scripts/city/addpost.phtml
@@ -1,6 +1,17 @@
-<br /><br />
+<head>
+	<title>Add Post</title>
+</head>
+
+<body>
+
+<div class="container">
+<div style="margin-top: 50px;"></div>
 <div>
+
 <?php
 echo $this->addpost;
 ?>
 </div>
+</div>
+
+</body>
