--- a/application/views/scripts/user/login.phtml
+++ b/application/views/scripts/user/login.phtml
@@ -15,8 +15,8 @@
 		
 		echo "<h3 class='text-danger'>".$this->error_message."</h3>";
 		echo $this->login_form;
-		echo '<a class="btn btn-primary" href="' . $this->facebook_url . '"> Login with Facebook </a><br>';
-                echo '<a class="btn btn-warning" href="' . $this->twitter . '"> Login with twitter </a>';
+		echo '<a class="btn btn-primary" href="' . $this->facebook_url . '"> Login with Facebook </a><br><br>';
+        echo '<a class="btn btn-warning" href="' . $this->twitter . '"> Login with twitter </a>';
 	?>
 
 	
