--- a/application/views/scripts/user/add.phtml
+++ b/application/views/scripts/user/add.phtml
@@ -5,7 +5,7 @@
 </head>
 <body>
 <div class="container">
-<div class = "page-header" >
+<div class = "page-header" align="center">
    
    <h1>Registration Form</h1>
    
