edit hotal reservation info & insert data in db

--- a/application/views/scripts/user/hotalinfo.phtml
+++ b/application/views/scripts/user/hotalinfo.phtml
@@ -13,7 +13,7 @@ color:lightgrey;
 	 border: 1px solid #2980B9;
 }
 </style>
-<p id="a"><center>hotal rental request </center></p>
+<p id="a"><center>hotal reservation request </center></p>
 <div class=>
 <table id="z"class="table table-striped  table-bordered table-hover table-responsive">
 <?php
