adjust design of country page

--- a/application/views/scripts/user/login.phtml
+++ b/application/views/scripts/user/login.phtml
@@ -7,7 +7,7 @@
 <div class="container">
 <div class = "page-header" >
    
-   <h1>Login Form</h1>
+   <h1 class="text-center">Login Form</h1>
    
 </div>
 
