--- a/public/bootstrap/css/creative.css
+++ b/public/bootstrap/css/creative.css
@@ -33,7 +33,7 @@ a {
 
 a:hover,
 a:focus {
-    color: #eb3812;
+    color: #80c52e;
 }
 
 h1,
@@ -103,18 +103,19 @@ aside {
     font-size: 13px;
     font-weight: 700;
     color: #222;
+    background-color: #80c52e;
 }
 
 .navbar-default .nav > li>a:hover,
 .navbar-default .nav>li>a:focus:hover {
-    color: #f05f40;
+    color: #80c52e;
+    background-color: #80c52e;
 }
 
 .navbar-default .nav > li.active>a,
 .navbar-default .nav>li.active>a:focus {
-    color: #f05f40!important;
-    background-color: transparent;
-}
+    color: #f80c52e!important;
+background-color: #80c52e;}
 
 .navbar-default .nav > li.active>a:hover,
 .navbar-default .nav>li.active>a:focus:hover {
@@ -143,7 +144,7 @@ aside {
 
     .navbar-default .nav > li>a:hover,
     .navbar-default .nav>li>a:focus:hover {
-        color: #fff;
+        color: #80c52e;
     }
 
     .navbar-default.affix {
@@ -153,12 +154,12 @@ aside {
 
     .navbar-default.affix .navbar-header .navbar-brand {
         font-size: 14px;
-        color: #f05f40;
+        color: #80c52e;
     }
 
     .navbar-default.affix .navbar-header .navbar-brand:hover,
     .navbar-default.affix .navbar-header .navbar-brand:focus {
-        color: #eb3812;
+        color: #80c52e;
     }
 
     .navbar-default.affix .nav > li>a,
@@ -168,7 +169,7 @@ aside {
 
     .navbar-default.affix .nav > li>a:hover,
     .navbar-default.affix .nav>li>a:focus:hover {
-        color: #f05f40;
+        color: #80c52e;
     }
 }
 
@@ -325,7 +326,7 @@ header .header-content .header-content-inner p {
 }
 
 .text-primary {
-    color: #f05f40;
+    color: #80c52e;
 }
 
 .no-gutter > [class*=col-] {
@@ -430,12 +431,12 @@ fieldset[disabled] .btn-primary:active,
 .btn-primary.disabled.active,
 .btn-primary[disabled].active,
 fieldset[disabled] .btn-primary.active {
-    border-color: #f05f40;
-    background-color: #f05f40;
+    border-color: #80c52e;
+    background-color: #80c52e;
 }
 
 .btn-primary .badge {
-    color: #f05f40;
+    color: #80c52e;#fff
     background-color: #fff;
 }
 
