Add bootstrap to City page

--- a/application/views/scripts/city/display.phtml
+++ b/application/views/scripts/city/display.phtml
@@ -1,14 +1,13 @@
-
-<br /><br />
-<div id="map"></div>
-
-<div id="view-content">
-
+<br>
+    <?php echo "<div><img class='img-rounded' src='{$this->city_img}' style='width: 100%; height:20%'></div>";?>
+    <div class="container-fluid" id='map'></div>
+    <div id="view-content">
 <p>
+
     <?php
-    echo $this->city_desc;
+    echo "<span class='-align-left' style='color:#3c763d'>City Description : </span>".$this->city_desc;
     if(isset($_SESSION['Zend_Auth']['storage']))
-    {echo "<a href='/city/addpost/city_id/{$this->city_id}'>Add Post</a>";}
+    {echo "<a href='/city/addpost/city_id/{$this->city_id}'>Add Your Experience In this City</a>";}
     ?>
 
     <?php
@@ -16,12 +15,11 @@
 
     foreach ($this->paginator as $key => $val)
     {
-        echo $val['title'];
+        echo "<span style='color: #3c763d'>Experience Title </span>".$val['title'];
         echo "<br>";
-        $subPost=substr($val['content'],0,50);
-        echo $subPost."...";
+        $subPost=substr($val['content'],0,40);
+        echo "<span style='color: #3c763d'>Experience Content </span>".$subPost."...";
         echo "<br>";
-//        echo $val['content'];
         echo "<a href='/city/post/post_id/{$val["id"]}'>See more</a>";
     }
     echo $this->paginator;
