--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -37,6 +37,7 @@ fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="a
         }
         #map {
             height: 50%;
+            width: 95%;
         }
 
     </style>
