--- a/application/views/scripts/city/display.phtml
+++ b/application/views/scripts/city/display.phtml
@@ -1,5 +1,5 @@
 <br>
-    <?php echo "<div><img class='img-rounded' src='{$this->city_img}' style='width: 100%; height:20%'></div>";?>
+    <?php echo "<div class='container-fluid'><img class='img-rounded' src='{$this->city_img}' style='width: %100;height: 20%'></div>";?>
     <div class="container-fluid" id='map'></div>
     <div id="view-content">
 <p>
@@ -15,11 +15,12 @@
 
     foreach ($this->paginator as $key => $val)
     {
-        echo "<span style='color: #3c763d'>Experience Title </span>".$val['title'];
+        echo "<br>";
+        echo "<span style='background-color: #c1e2b3'>{$val['title']}</span>";
         echo "<br>";
         $subPost=substr($val['content'],0,40);
-        echo "<span style='color: #3c763d'>Experience Content </span>".$subPost."...";
-        echo "<br>";
+        echo "<span style='color: #3c763d'></span>".$subPost."...";
+
         echo "<a href='/city/post/post_id/{$val["id"]}'>See more</a>";
     }
     echo $this->paginator;
