--- a/application/views/scripts/country/list.phtml
+++ b/application/views/scripts/country/list.phtml
@@ -8,9 +8,12 @@
         <div class="container">
 
             <div class="page-header" align="center">
+            
                 <h2>All Countries </h2>
                 <div class="pull-left">
                     <a class='btn btn-success btn-lg' href='/country/add'>Add</a>
+                    <a class='btn btn-info btn-lg' href='/user/admin'>Back</a>
+
                 </div>
             </div>
             <div style="margin-top: 80px;"></div>
