--- a/application/views/scripts/user/admin.phtml
+++ b/application/views/scripts/user/admin.phtml
@@ -21,6 +21,9 @@
                         <div class="pull-left">
                             <a class='btn btn-danger btn-lg' href='/user/logout'>Logout</a>
                         </div>
+                        <div class="pull-right">
+                            <a class='btn btn-primary btn-lg' href='<?php echo $this->baseUrl() ?>/'>Visit Website</a>
+                        </div>
                         <?php
                     }
                 }
